# openhands-nix

./: .gitignore  PLAN.org  README.md  docker-compose.yml  flake.nix
docs/: api.md
kubernetes/: broker.nix  default.nix  external-secrets.nix  lifecycle.nix  nix-csi.nix  server.nix  webhooks.nix
overlays/: python.nix
pkgs/cli/: default.nix
pkgs/images/: agent-server.nix  aws-credentials-server.py  entrypoint.sh  git-credential-broker.sh  lazy-chromium.sh  lazy-package.nix  lazy-vscode.sh  review-app.sh  server.nix  service.nix
pkgs/kubernetes-workspace/: default.nix  pyproject.toml
pkgs/kubernetes-workspace/src/openhands_nix/: __init__.py  csi.py  kubernetes.py  local.py  workspace.py
pkgs/sdk/: browser-deps.nix  default.nix  tests.nix
pkgs/sdk/patches/: 0001-event-service-non-blocking-subscribe.patch  patch-event-service.py
pkgs/server/: default.nix  kubenix_runtime.py  kubernetes_sandbox.py  nix_runtime.py  openhands-nix-extensions.pth  register_kubernetes_sandbox.py  startup_recovery.py  strip_prefix_middleware.py  workspace-pvc-template.yaml
pkgs/server/sandbox-eval/: default.nix  eval.nix  ingress.nix  job.nix  options.nix  pvc.nix  service-account.nix  service.nix
pkgs/server/tests/: test_sandbox_template.py
services/broker/: default.nix  pyproject.toml
services/broker/src/openhands_broker/: app.py  auth.py  config.py  github_app.py  proxy.py
services/broker/src/openhands_broker/providers/: github.py  gitlab.py  jira.py  slack.py
services/broker/tests/: test_auth.py  test_proxy.py
services/common/: default.nix  pyproject.toml
services/common/src/openhands_common/: config.py  messaging.py
services/common/tests/: test_db.py  test_messaging.py
services/lifecycle/: default.nix  pyproject.toml
services/lifecycle/src/openhands_lifecycle/: app.py  cleanup.py  config.py  k8s.py  resume.py
services/lifecycle/tests/: test_cleanup.py
services/webhooks/: default.nix  pyproject.toml
services/webhooks/src/openhands_webhooks/: app.py  config.py  openhands_client.py  status_monitor.py
services/webhooks/src/openhands_webhooks/handlers/: github.py  gitlab.py  jira.py  slack.py
services/webhooks/src/openhands_webhooks/responses/: github.py
services/webhooks/tests/: test_handlers.py  test_openhands_client.py
skills/: nix-environment.md  nix-packages.md
tests/: pyproject.toml
tests/integration/: conftest.py  test_agent.py  test_conversation.py  test_sandbox.py  test_sandbox_lifecycle.py
