[project]
name = "openhands-nix-tests"
version = "0.1.0"
description = "Integration tests for OpenHands on Kubernetes"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "kubernetes>=31",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["integration"]
log_cli = true
log_cli_level = "INFO"
