[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openhands-common"
version = "0.1.0"
description = "Shared database and messaging layer for OpenHands services"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "aio-pika>=9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
